--- a/server/src/static/css/master.css
+++ b/server/src/static/css/master.css
@@ -19,10 +19,16 @@ body {
   color: white;
 }
 
+img {
+  max-width:100%;
+  max-height:100%;
+}
+
 .container_master {
   width: auto;
-  height: auto;
-  margin-top: 50px;
+  margin: 50px;
+  text-align: center;
+  display: flex;
 }
 
 .container_counter_title {
@@ -40,13 +46,27 @@ body {
 .container_queue {
   text-align: center;
   width: 49%;
-  display: block;
+  display: inline-block;
 }
 
 .container_misc {
   text-align: center;
   width: 49%;
-  display: block;
+  display: inline-block;
+  margin-left: 30px;
+  display: flex;
+  flex-flow: column;
+}
+
+.container_misc_misc {
+  background-color: rgb(24, 24, 24);
+  display: flex;
+  flex-flow: column;
+  flex: 1 1 auto;
+  margin-top:10px;
+  line-height: 500px;
+  border-radius: 20px;
+  box-shadow: inset 0 0 10px black;
 }
 
 .container_counter {
