--- a/server/src/static/css/master.css
+++ b/server/src/static/css/master.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  background-color: #282828;
+  background-color: #143b6e;
   font-family: "Roboto-Regular";
   color: white;
 }
@@ -32,13 +32,13 @@ img {
 }
 
 .container_counter_title {
-  color: rgb(144, 144, 144);
+  color: #5d8ecd;
   font-family: Roboto-Medium;
   text-shadow: 0px 0px 5px black;
 }
 
 .container_customer_title {
-  color: rgb(144, 144, 144);
+  color: #8a1c1c;
   font-family: Roboto-Medium;
   text-shadow: 0px 0px 5px black;
 }
@@ -59,7 +59,7 @@ img {
 }
 
 .container_misc_misc {
-  background-color: rgb(24, 24, 24);
+  background-color: #062e63;
   display: flex;
   flex-flow: column;
   flex: 1 1 auto;
@@ -80,9 +80,9 @@ img {
   width: 47%;
   height: auto;
   display: inline-block;
-  border: solid rgb(112, 112, 112) 1px;
+  box-shadow: inset 0 0 15px black;
   border-radius: 5px;
-  background-color: rgb(24, 24, 24);
+  background-color: #062e63;
   padding: 10px;
 }
 
@@ -93,6 +93,7 @@ img {
 }
 
 .container_customer_number {
+  color: #143b6e;
   font-family: Roboto-Black;
   font-size: 70px;
   text-shadow: 0px 0px 10px black;
