--- a/client/src/html/pref.css
+++ b/client/src/html/pref.css
@@ -1,3 +1,12 @@
+:root {
+  --color-neutral:  #143b6e;
+  --color-dark:     #062e63;
+  --color-darker:   #05254f;
+  --text-visible-1: #5d8ecd;
+  --text-visible-2: #ffffff;
+  --button-hover:   #28548e;
+}
+
 @font-face {
   font-family: "Roboto-Regular";
   src: url(fonts/Roboto-Regular.ttf);
@@ -21,9 +30,9 @@
 body {
   padding: 0px;
   margin: 0px;
-  background-color: #143b6e;
+  background-color: var(--color-neutral);
   font-family: Inconsolata-Regular;
-  color: #5d8ecd;
+  color: var(--text-visible-1);
   text-align: center;
 }
 
@@ -41,7 +50,7 @@ body {
 .container_config {
   width: 100%;
   padding: 10px;
-  background-color: #062e63;
+  background-color: var(--color-neutral);
   border-radius: 10px;
   box-shadow: inset 0 0 10px black;
 
@@ -61,16 +70,16 @@ body {
 .config_item input {
   margin-left: 20px;
   border: 0px;
-  background-color: #05254f;
-  color: white;
+  background-color: var(--color-darker);
+  color: var(--text-visible-2);
   font-family: Inconsolata-Regular
 }
 
 .config_item select {
   margin-left: 20px;
   border: 0px;
-  background-color: #05254f;
-  color: white;
+  background-color: var(--color-darker);
+  color: var(--text-visible-2);
   font-family: Inconsolata-Regular
 }
 
@@ -78,14 +87,14 @@ body {
   padding: 10px;
   border: 0px;
   margin: 10px;
-  background-color: #05254f;
-  color: white;
+  background-color: var(--color-darker);
+  color: var(--text-visible-2);
   font-family: Roboto-Medium;
   font-size: 15px;
 }
 
 .config_item button:hover {
-  background-color: #3F3F41;
+  background-color: var(--button-hover);
 }
 
 #title-bar {
@@ -93,9 +102,9 @@ body {
   height: 32px;
   padding: 0px;
   margin: 0px;
-  color: #ADADAD;
+  color: var(--text-visible-1);
   font-family: sans-serif;
-  background-color: #062e63;
+  background-color: var(--color-darker);
 }
 
 #title {
@@ -118,7 +127,7 @@ body {
   width: 32px;
   background-color: transparent;
   border: none;
-  color: #F1F1F1;
+  color: var(--text-visible-2);
   font-size: 16px;
 }
 
@@ -129,7 +138,7 @@ body {
 }
 
 #title-bar-btns button:hover {
-  background-color: #28548e;
+  background-color: var(--button-hover);
 }
 
 #content {
