--- a/server/src/static/css/master.css
+++ b/server/src/static/css/master.css
@@ -1,3 +1,12 @@
+:root {
+  --color-neutral:  #143b6e;
+  --color-dark:     #062e63;
+  --color-darker:   #05254f;
+  --text-visible-1: #5d8ecd;
+  --text-visible-2: #ffffff;
+  --button-hover:   #28548e;
+}
+
 @font-face {
   font-family: "Roboto-Regular";
   src: url(fonts/Roboto-Regular.ttf);
@@ -14,9 +23,9 @@
 }
 
 body {
-  background-color: #143b6e;
+  background-color: var(--color-neutral);
   font-family: "Roboto-Regular";
-  color: white;
+  color: var(--text-visible-1);
 }
 
 img {
@@ -25,48 +34,65 @@ img {
 }
 
 .container_master {
-  width: auto;
-  margin: 50px;
+  margin: 1%;
   text-align: center;
   display: flex;
-}
-
-.container_counter_title {
-  color: #5d8ecd;
-  font-family: Roboto-Medium;
-  text-shadow: 0px 0px 5px black;
-}
-
-.container_customer_title {
-  color: #8a1c1c;
-  font-family: Roboto-Medium;
-  text-shadow: 0px 0px 5px black;
+  flex-direction: row;
 }
 
 .container_queue {
   text-align: center;
-  width: 49%;
-  display: inline-block;
+  width: 39%;
+  display: flex;
+  flex-direction: column;
 }
 
 .container_misc {
   text-align: center;
-  width: 49%;
-  display: inline-block;
-  margin-left: 30px;
+  width: 59%;
+  margin-left: 2%;
   display: flex;
   flex-flow: column;
 }
 
-.container_misc_misc {
-  background-color: #062e63;
+.container_header {
   display: flex;
-  flex-flow: column;
-  flex: 1 1 auto;
-  margin-top: 10px;
-  line-height: 500px;
-  border-radius: 20px;
-  box-shadow: inset 0 0 10px black;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container_header img {
+  height: 307px;
+  width: 307px;
+}
+
+.container_timeanddate {
+  width: 600px;
+  height: 307px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+#time {
+  font-family: Roboto-Black;
+  font-size: 125px;
+  color:var(--text-visible-2);
+}
+
+#date {
+  line-height: 10px;
+  font-family: Roboto-Medium;
+  font-size: 40px;
+  color:var(--text-visible-2);
+}
+
+.container_qlist {
+  display: flex;
+  flex-direction: row;
+  margin: 1%;
 }
 
 .container_counter {
@@ -82,24 +108,43 @@ img {
   display: inline-block;
   box-shadow: inset 0 0 15px black;
   border-radius: 5px;
-  background-color: #062e63;
+  background-color: var(--color-dark);
   padding: 10px;
 }
 
+.container_counter_title {
+  font-family: Roboto-Medium;
+  text-shadow: 0px 0px 5px black;
+}
+
+.container_customer_title {
+  color: #8a1c1c;
+  font-family: Roboto-Medium;
+  text-shadow: 0px 0px 5px black;
+}
+
+.container_misc_misc {
+  background-color: var(--color-dark);
+  display: flex;
+  flex-flow: column;
+  margin-top: 1%;
+  height: 506px;
+  width: 900px;
+  border-radius: 20px;
+  box-shadow: inset 0 0 10px black;
+}
+
+
 .container_counter_number {
+  color: var(--text-visible-2);
   font-family: Roboto-Black;
-  font-size: 70px;
+  font-size: 55px;
   text-shadow: 0px 0px 10px black;
 }
 
 .container_customer_number {
-  color: #143b6e;
+  color: var(--color-neutral);
   font-family: Roboto-Black;
-  font-size: 70px;
+  font-size: 55px;
   text-shadow: 0px 0px 10px black;
-}
-
-.container_qlist {
-  padding: 2px;
-  margin: 5px;
 }
