final beta commit for beta build

--- a/server/src/static/css/master.css
+++ b/server/src/static/css/master.css
@@ -4,6 +4,7 @@
   --color-darker:   #05254f;
   --text-visible-1: #5d8ecd;
   --text-visible-2: #ffffff;
+  --text-flashing:  #93f27c;
   --button-hover:   #28548e;
 }
 
