--- a/client/src/html/pref.css
+++ b/client/src/html/pref.css
@@ -50,7 +50,7 @@ body {
 .container_config {
   width: 100%;
   padding: 10px;
-  background-color: var(--color-neutral);
+  background-color: var(--color-dark);
   border-radius: 10px;
   box-shadow: inset 0 0 10px black;
 
