--- a/server/src/static/css/master.css
+++ b/server/src/static/css/master.css
@@ -43,7 +43,7 @@ img {
 
 .container_queue {
   text-align: center;
-  width: 39%;
+  width: 24%;
   display: flex;
   flex-direction: column;
 }
@@ -57,18 +57,21 @@ img {
 }
 
 .container_header {
+  width: auto;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
-.container_header img {
-  height: 307px;
-  width: 307px;
+.container_image {
+  height: 300px;
+  width: 300px;
 }
 
 .container_timeanddate {
-  width: 600px;
+  width: 500px;
   height: 307px;
   display: flex;
   flex-direction: column;
@@ -77,7 +80,7 @@ img {
 
 #time {
   font-family: Roboto-Black;
-  font-size: 125px;
+  font-size: 100px;
   color:var(--text-visible-2);
 }
 
@@ -127,8 +130,8 @@ img {
   display: flex;
   flex-flow: column;
   margin-top: 1%;
-  height: 506px;
-  width: 900px;
+  height: 390px;
+  width: 950px;
   border-radius: 20px;
   box-shadow: inset 0 0 10px black;
 }
@@ -137,13 +140,13 @@ img {
 .container_counter_number {
   color: var(--text-visible-2);
   font-family: Roboto-Black;
-  font-size: 55px;
+  font-size: 45px;
   text-shadow: 0px 0px 10px black;
 }
 
 .container_customer_number {
   color: var(--color-neutral);
   font-family: Roboto-Black;
-  font-size: 55px;
+  font-size: 45px;
   text-shadow: 0px 0px 10px black;
 }
