--- a/server/src/static/css/master.css
+++ b/server/src/static/css/master.css
@@ -1,11 +1,11 @@
 :root {
-  --color-neutral:  #143b6e;
-  --color-dark:     #062e63;
-  --color-darker:   #05254f;
+  --color-neutral: #143b6e;
+  --color-dark: #062e63;
+  --color-darker: #05254f;
   --text-visible-1: #5d8ecd;
   --text-visible-2: #ffffff;
-  --text-flashing:  #93f27c;
-  --button-hover:   #28548e;
+  --text-flashing: #93f27c;
+  --button-hover: #28548e;
 }
 
 @font-face {
@@ -24,9 +24,13 @@
 }
 
 body {
+  width: 98%;
   background-color: var(--color-neutral);
   font-family: "Roboto-Regular";
   color: var(--text-visible-1);
+  display: flex;
+  flex-direction: column;
+  text-shadow: black 0 0 1vh;
 }
 
 img {
@@ -35,119 +39,122 @@ img {
 }
 
 .container_master {
-  margin: 1%;
-  text-align: center;
+  margin: 3vh;
+  min-height: 83vh;
+  height: 83vh;
   display: flex;
   flex-direction: row;
 }
 
 .container_queue {
-  text-align: center;
-  width: 39%;
+  min-width: 30%;
+  width: 30%;
   display: flex;
   flex-direction: column;
 }
 
-.container_misc {
-  text-align: center;
-  width: 59%;
-  margin-left: 2%;
+.container_qlist {
+  min-width: 100%;
+  width: 100%;
   display: flex;
-  flex-flow: column;
+  flex-direction: row;
+  text-align: center;
+}
+
+.container_counter {
+  width: 50%;
+  padding: 1vh;
+  margin: 0vh 3vh 3vh;
+}
+
+.container_counter_title {
+  font-family: Roboto-Medium;
+}
+
+.container_counter_number {
+  font-family: Roboto-Black;
+  font-size: 3.8vh;
+  color: var(--text-visible-2);
+}
+
+.container_customer {
+  width: 50%;
+  padding: 1vh;
+  margin: 0vh 3vh 3vh;
+  background-color: var(--color-dark);
+  border-radius: 2vh;
+  box-shadow: inset 0 0 2vh rgba(8, 8, 8, 0.51);
+}
+
+.container_customer_title {
+  font-family: Roboto-Medium;
+  color: #8a1c1c;
+}
+
+.container_customer_number {
+    font-family: Roboto-Black;
+    font-size: 3.8vh;
+    color: var(--color-neutral);
+}
+
+.container_misc {
+  min-width: 70%;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
 }
 
 .container_header {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  min-height: 30%;
+  height: 30%;
 }
 
-.container_header img {
-  height: 307px;
-  width: 307px;
+.container_image {
+  text-align: center;
 }
 
 .container_timeanddate {
-  width: 600px;
-  height: 307px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    background-color: var(--color-dark);
+    color: var(--text-visible-2);
+    text-align: center;
+    font-family: Roboto-Medium;
+    border-radius: 2vh;
+    box-shadow: inset 0 0 2vh rgba(8, 8, 8, 0.51);
+    width: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 4vh;
 }
 
 #time {
-  font-family: Roboto-Black;
-  font-size: 125px;
-  color:var(--text-visible-2);
+  margin-bottom: 0vh;
+  font-size: 13vh
 }
 
 #date {
-  line-height: 10px;
-  font-family: Roboto-Medium;
-  font-size: 40px;
-  color:var(--text-visible-2);
-}
-
-.container_qlist {
-  display: flex;
-  flex-direction: row;
-  margin: 1%;
-}
-
-.container_counter {
-  width: 46%;
-  height: auto;
-  display: inline-block;
-  padding: 10px;
-}
-
-.container_customer {
-  width: 47%;
-  height: auto;
-  display: inline-block;
-  box-shadow: inset 0 0 15px black;
-  border-radius: 5px;
-  background-color: var(--color-dark);
-  padding: 10px;
-}
-
-.container_counter_title {
-  font-family: Roboto-Medium;
-  text-shadow: 0px 0px 5px black;
-}
-
-.container_customer_title {
-  color: #8a1c1c;
-  font-family: Roboto-Medium;
-  text-shadow: 0px 0px 5px black;
+  margin-top: 0vh;
+  line-height: 0vh;
+  font-size: 3vh;
 }
 
 .container_misc_misc {
+    background-color: var(--color-dark);
+    border-radius: 2vh;
+    box-shadow: inset 0 0 2vh rgba(8, 8, 8, 0.51);
+    height: 100vh;
+    margin-top: 3vh;
+    padding: 2vh;
+}
+
+.container_master_footer {
+  margin-left: 3vh;
+  margin-right: 3vh;
+  margin-bottom: 3vh;
+  min-height: 5vh;
   background-color: var(--color-dark);
-  display: flex;
-  flex-flow: column;
-  margin-top: 1%;
-  height: 506px;
-  width: 900px;
-  border-radius: 20px;
-  box-shadow: inset 0 0 10px black;
-}
-
-
-.container_counter_number {
-  color: var(--text-visible-2);
-  font-family: Roboto-Black;
-  font-size: 55px;
-  text-shadow: 0px 0px 10px black;
-}
-
-.container_customer_number {
-  color: var(--color-neutral);
-  font-family: Roboto-Black;
-  font-size: 55px;
-  text-shadow: 0px 0px 10px black;
-}
-
-#others {
-  font-size: 30px;
+  border-radius: 2vh;
+  box-shadow: inset 0 0 2vh rgba(8, 8, 8, 0.51);
 }
