--- a/server/src/static/css/master.css
+++ b/server/src/static/css/master.css
@@ -23,6 +23,11 @@
   src: url(fonts/Roboto-Black.ttf);
 }
 
+@font-face {
+  font-family: "Inconsolata-Bold";
+  src: url(fonts/Inconsolata-Bold.ttf);
+}
+
 body {
   width: 98%;
   background-color: var(--color-neutral);
@@ -141,20 +146,104 @@ img {
 }
 
 .container_misc_misc {
+  position: relative;
     background-color: var(--color-dark);
     border-radius: 2vh;
     box-shadow: inset 0 0 2vh rgba(8, 8, 8, 0.51);
     height: 100vh;
     margin-top: 3vh;
     padding: 2vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.container_image_master {
+    position: absolute;
+    top: 2vh;
+    right: 2vh;
+    z-index: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.container_image_stuff {
+  margin-left:5px;
+  margin-bottom: 4px;
+  width: 24.25vh;
+  height: 12.125vh;
+}
+
+#videoPlayer {
+  height: 50vh;
+  width: 88.88889vh;
 }
 
 .container_master_footer {
   margin-left: 3vh;
   margin-right: 3vh;
-  margin-bottom: 3vh;
   min-height: 5vh;
   background-color: var(--color-dark);
   border-radius: 2vh;
   box-shadow: inset 0 0 2vh rgba(8, 8, 8, 0.51);
+}
+
+/* Marquee */
+
+.marquee {
+  font-family: Inconsolata-Bold;
+  font-size: 2vh;
+  color: var(--text-visible-2);
+  white-space: nowrap;
+  margin:0, auto;
+  overflow:hidden;
+}
+
+.marquee span {
+    display: inline-block;
+    padding-left: 100%;
+    text-indent: 0;
+    animation: marquee 60s linear infinite;
+}
+
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
+
+/* Video Player Overlay */
+.container_videoPlayer{
+    position: relative;
+}
+
+.container_video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+}
+
+#overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50vh;
+  width: 88.88889vh;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 5;
+}
+
+#overlaytext {
+  font-size: 3vh;
+  text-shadow: transparent 0 0 0;
+  color: rgba(255, 255, 255, 0.0);
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin: 100px;
+  font-family: Roboto-Black;
+}
+
+#overlaynumber {
+  font-size: 15vh
 }
